--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "BSUIRSchedule"
+name = "bsuir_schedule"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+reqwest = { version = "0.11.10", features = ["blocking"] }
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = { version = "1.0.81" }
